<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="56dp"
    tools:context=".ui.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:textColor="?android:textColorPrimary"
            android:textSize="28sp"
            tools:text="Fall - 2023"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <ImageView
                android:id="@+id/ivBookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/bookmark"/>
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerSeason"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_rect"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_marginHorizontal="15dp"
        android:foreground="@drawable/arrow_bottom"
        android:foregroundGravity="right|center_vertical"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="15dp">
    </Spinner>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnimeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/rv_item_home"
        app:spanCount="2"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_duration="1000">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnimeCardSkeleton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:itemCount="10"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/rv_item_home_skeleton"
            app:spanCount="2"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="320dp"
            android:src="@drawable/kubo_error"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            android:text="@string/rto"/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="false"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:textAlignment="center"
            android:text="@string/retry"/>
    </LinearLayout>
</LinearLayout>